# lfort

./: .arcconfig  .gitignore  CMakeLists.txt  CODE_OWNERS.TXT  INSTALL.txt  Makefile  NOTES.txt  README.txt
examples/PrintFunctionNames/: CMakeLists.txt  Makefile  PrintFunctionNames.cpp  README.txt
examples/analyzer-plugin/: CMakeLists.txt  MainCallChecker.cpp  Makefile
examples/lfort-interpreter/: CMakeLists.txt  README.txt  main.cpp
lib/ARCMigrate/: ARCMT.cpp  ARCMTActions.cpp  CMakeLists.txt  FileRemapper.cpp  Internals.h  Makefile  ObjCMT.cpp  PlistReporter.cpp  TransAPIUses.cpp  TransARCAssign.cpp  TransAutoreleasePool.cpp  TransBlockObjCVariable.cpp  TransEmptyStatementsAndDealloc.cpp  TransGCAttrs.cpp  TransGCCalls.cpp  TransProperties.cpp  TransProtectedScope.cpp  TransRetainReleaseDealloc.cpp  TransUnbridgedCasts.cpp  TransUnusedInitDelegate.cpp  TransZeroOutPropsInDealloc.cpp  TransformActions.cpp  Transforms.cpp  Transforms.h
lib/AST/: APValue.cpp  ASTConsumer.cpp  ASTContext.cpp  ASTDiagnostic.cpp  ASTDumper.cpp  ASTImporter.cpp  AttrImpl.cpp  CMakeLists.txt  CXXABI.h  CXXInheritance.cpp  Comment.cpp  CommentBriefParser.cpp  CommentCommandTraits.cpp  CommentDumper.cpp  CommentLexer.cpp  CommentParser.cpp  CommentSema.cpp  Decl.cpp  DeclBase.cpp  DeclCXX.cpp  DeclFriend.cpp  DeclGroup.cpp  DeclObjC.cpp  DeclPrinter.cpp  DeclTemplate.cpp  DeclarationName.cpp  DumpXML.cpp  Expr.cpp  ExprCXX.cpp  ExprClassification.cpp  ExprConstant.cpp  ExternalASTSource.cpp  FortranABI.h  InheritViz.cpp  ItaniumCXXABI.cpp  ItaniumFortranABI.cpp  ItaniumMangle.cpp  LambdaMangleContext.cpp  Makefile  Mangle.cpp  (+22 more)
lib/ASTMatchers/: ASTMatchFinder.cpp  ASTMatchersInternal.cpp  CMakeLists.txt  Makefile
lib/Analysis/: AnalysisDeclContext.cpp  BodyFarm.cpp  BodyFarm.h  CFG.cpp  CFGReachabilityAnalysis.cpp  CFGStmtMap.cpp  CMakeLists.txt  CallGraph.cpp  CocoaConventions.cpp  Dominators.cpp  FormatString.cpp  FormatStringParsing.h  LiveVariables.cpp  Makefile  ObjCNoReturn.cpp  PostOrderCFGView.cpp  PrintfFormatString.cpp  ProgramPoint.cpp  PseudoConstantAnalysis.cpp  ReachableCode.cpp  ScanfFormatString.cpp  ThreadSafety.cpp  UninitializedValues.cpp
lib/Basic/: Builtins.cpp  CMakeLists.txt  ConvertUTF.c  ConvertUTFWrapper.cpp  Diagnostic.cpp  DiagnosticIDs.cpp  FileManager.cpp  FileSystemStatCache.cpp  IdentifierTable.cpp  LangOptions.cpp  Makefile  Module.cpp  ObjCRuntime.cpp  OperatorPrecedence.cpp  PCModule.cpp  SourceLocation.cpp  SourceManager.cpp  TargetInfo.cpp  Targets.cpp  TokenKinds.cpp  Version.cpp  VersionTuple.cpp
lib/CodeGen/: ABIInfo.h  BackendUtil.cpp  CGBlocks.cpp  CGBlocks.h  CGBuilder.h  CGBuiltin.cpp  CGCUDANV.cpp  CGCUDARuntime.cpp  CGCUDARuntime.h  CGCXX.cpp  CGCXXABI.cpp  CGCXXABI.h  CGCall.cpp  CGCall.h  CGClass.cpp  CGCleanup.cpp  CGCleanup.h  CGDebugInfo.cpp  CGDebugInfo.h  CGDecl.cpp  CGDeclCXX.cpp  CGException.cpp  CGExpr.cpp  CGExprAgg.cpp  CGExprCXX.cpp  CGExprComplex.cpp  CGExprConstant.cpp  CGExprScalar.cpp  CGFortranABI.cpp  CGFortranABI.h  CGObjC.cpp  CGObjCGNU.cpp  CGObjCMac.cpp  CGObjCRuntime.cpp  CGObjCRuntime.h  CGOpenCLRuntime.cpp  CGOpenCLRuntime.h  CGRTTI.cpp  CGRecordLayout.h  CGRecordLayoutBuilder.cpp  (+25 more)
lib/Driver/: Action.cpp  Arg.cpp  ArgList.cpp  CC1AsOptions.cpp  CMakeLists.txt  Compilation.cpp  Driver.cpp  DriverOptions.cpp  InputInfo.h  Job.cpp  Makefile  OptTable.cpp  Option.cpp  Phases.cpp  SanitizerArgs.h  Tool.cpp  ToolChain.cpp  ToolChains.cpp  ToolChains.h  Tools.cpp  Tools.h  Types.cpp  WindowsToolChain.cpp
lib/Edit/: CMakeLists.txt  Commit.cpp  EditedSource.cpp  Makefile  RewriteObjCFoundationAPI.cpp
lib/Format/: CMakeLists.txt  Format.cpp  Makefile  UnwrappedLineParser.cpp  UnwrappedLineParser.h
lib/Frontend/: ASTConsumers.cpp  ASTMerge.cpp  ASTUnit.cpp  CMakeLists.txt  CacheTokens.cpp  ChainedDiagnosticConsumer.cpp  ChainedIncludesSource.cpp  CompilerInstance.cpp  CompilerInvocation.cpp  CreateInvocationFromCommandLine.cpp  DependencyFile.cpp  DependencyGraph.cpp  DiagnosticRenderer.cpp  FrontendAction.cpp  FrontendActions.cpp  FrontendOptions.cpp  HeaderIncludeGen.cpp  InitHeaderSearch.cpp  InitPreprocessor.cpp  LangStandards.cpp  LayoutOverrideSource.cpp  LogDiagnosticPrinter.cpp  Makefile  MultiplexConsumer.cpp  PrintPreprocessedOutput.cpp  SerializedDiagnosticPrinter.cpp  TextDiagnostic.cpp  TextDiagnosticBuffer.cpp  TextDiagnosticPrinter.cpp  VerifyDiagnosticConsumer.cpp  Warnings.cpp
lib/FrontendTool/: CMakeLists.txt  ExecuteCompilerInvocation.cpp  Makefile
lib/Lex/: CMakeLists.txt  HeaderMap.cpp  HeaderSearch.cpp  Lexer.cpp  LiteralSupport.cpp  MacroArgs.cpp  MacroArgs.h  MacroInfo.cpp  Makefile  ModuleMap.cpp  PCModuleMap.cpp  PPCaching.cpp  PPCallbacks.cpp  PPConditionalDirectiveRecord.cpp  PPDirectives.cpp  PPExpressions.cpp  PPLexerChange.cpp  PPMacroExpansion.cpp  PTHLexer.cpp  Pragma.cpp  PreprocessingRecord.cpp  Preprocessor.cpp  PreprocessorLexer.cpp  ScratchBuffer.cpp  TokenConcatenation.cpp  TokenLexer.cpp
lib/Parse/: CMakeLists.txt  Makefile  ParseAST.cpp  ParseCXXInlineMethods.cpp  ParseDecl.cpp  ParseDeclCXX.cpp  ParseExpr.cpp  ParseExprCXX.cpp  ParseInit.cpp  ParseObjc.cpp  ParsePragma.cpp  ParsePragma.h  ParseStmt.cpp  ParseTemplate.cpp  ParseTentative.cpp  Parser.cpp  RAIIObjectsForParser.h
lib/Serialization/: ASTCommon.cpp  ASTCommon.h  ASTReader.cpp  ASTReaderDecl.cpp  ASTReaderInternals.h  ASTReaderStmt.cpp  ASTWriter.cpp  ASTWriterDecl.cpp  ASTWriterStmt.cpp  CMakeLists.txt  GeneratePCH.cpp  Makefile  Module.cpp  ModuleManager.cpp  PCModule.cpp  PCModuleManager.cpp
lib/Tooling/: ArgumentsAdjusters.cpp  CMakeLists.txt  CommonOptionsParser.cpp  CompilationDatabase.cpp  FileMatchTrie.cpp  JSONCompilationDatabase.cpp  Makefile  Refactoring.cpp  RefactoringCallbacks.cpp  Tooling.cpp
test/: CMakeLists.txt  Makefile  lit.cfg  lit.site.cfg.in
test/ARCMT/: GC-check-warn-nsalloc.m  GC-check.m  GC-no-arc-runtime.m  GC-no-arc-runtime.m.result  GC-no-finalize-removal.m  GC-no-finalize-removal.m.result  GC.m  GC.m.result  (+72 more)
tools/: CMakeLists.txt  Makefile
unittests/: CMakeLists.txt  Makefile
(+5979 files in other folders)
