add_lfort_library(lfortARCMigrate
  ARCMT.cpp
  ARCMTActions.cpp
  FileRemapper.cpp
  ObjCMT.cpp
  PlistReporter.cpp
  TransAPIUses.cpp
  TransARCAssign.cpp
  TransAutoreleasePool.cpp
  TransBlockObjCVariable.cpp
  TransEmptyStatementsAndDealloc.cpp
  TransGCAttrs.cpp
  TransGCCalls.cpp
  TransProperties.cpp
  TransProtectedScope.cpp
  TransRetainReleaseDealloc.cpp
  TransUnbridgedCasts.cpp
  TransUnusedInitDelegate.cpp
  TransZeroOutPropsInDealloc.cpp
  TransformActions.cpp
  Transforms.cpp
  )

add_dependencies(lfortARCMigrate
  LFortAttrClasses
  LFortAttrList
  LFortAttrParsedAttrList
  LFortCommentNodes
  LFortDeclNodes
  LFortDiagnosticCommon
  LFortDiagnosticGroups
  LFortDiagnosticSema
  LFortStmtNodes
  )

target_link_libraries(lfortARCMigrate
  lfortBasic
  lfortAST
  lfortParse
  lfortFrontend
  lfortRewriteCore
  lfortRewriteFrontend
  )
