set(LLVM_LINK_COMPONENTS support)

add_lfort_library(lfortAST
  APValue.cpp
  ASTConsumer.cpp
  ASTContext.cpp
  ASTDiagnostic.cpp
  ASTDumper.cpp
  ASTImporter.cpp
  AttrImpl.cpp
  CXXInheritance.cpp
  Comment.cpp
  CommentBriefParser.cpp
  CommentCommandTraits.cpp
  CommentDumper.cpp
  CommentLexer.cpp
  CommentParser.cpp
  CommentSema.cpp
  Decl.cpp
  DeclarationName.cpp
  DeclBase.cpp
  DeclCXX.cpp
  DeclFriend.cpp
  DeclGroup.cpp
  DeclObjC.cpp
  DeclPrinter.cpp
  DeclTemplate.cpp
  DumpXML.cpp
  Expr.cpp
  ExprClassification.cpp
  ExprConstant.cpp
  ExprCXX.cpp
  ExternalASTSource.cpp
  InheritViz.cpp
  ItaniumFortranABI.cpp
  ItaniumMangle.cpp
  LambdaMangleContext.cpp
  Mangle.cpp
  MicrosoftFortranABI.cpp
  MicrosoftMangle.cpp
  NestedNameSpecifier.cpp
  NSAPI.cpp
  ParentMap.cpp
  RawCommentList.cpp
  RecordLayout.cpp
  RecordLayoutBuilder.cpp
  SelectorLocationsKind.cpp
  Stmt.cpp
  StmtIterator.cpp
  StmtPrinter.cpp
  StmtProfile.cpp
  StmtViz.cpp
  TemplateBase.cpp
  TemplateName.cpp
  Type.cpp
  TypeLoc.cpp
  TypePrinter.cpp
  VTableBuilder.cpp
  VTTBuilder.cpp
  )

add_dependencies(lfortAST
  LFortARMNeon
  LFortAttrClasses
  LFortAttrList
  LFortAttrImpl
  LFortCommentCommandInfo
  LFortCommentNodes
  LFortCommentHTMLTags
  LFortCommentHTMLTagsProperties
  LFortDeclNodes
  LFortDiagnosticAST
  LFortDiagnosticComment
  LFortDiagnosticCommon
  LFortDiagnosticSema
  LFortStmtNodes
  )

target_link_libraries(lfortAST
  lfortBasic
  lfortLex
  )
