add_lfort_library(lfortAnalysis
  AnalysisDeclContext.cpp
  BodyFarm.cpp
  CFG.cpp
  CFGReachabilityAnalysis.cpp
  CFGStmtMap.cpp
  CallGraph.cpp
  CocoaConventions.cpp
  Dominators.cpp
  FormatString.cpp
  LiveVariables.cpp
  ObjCNoReturn.cpp
  PostOrderCFGView.cpp
  PrintfFormatString.cpp
  ProgramPoint.cpp
  PseudoConstantAnalysis.cpp
  ReachableCode.cpp
  ScanfFormatString.cpp
  ThreadSafety.cpp
  UninitializedValues.cpp
  )

add_dependencies(lfortAnalysis
  LFortAttrClasses
  LFortAttrList
  LFortCommentNodes
  LFortDiagnosticCommon
  LFortDeclNodes
  LFortDiagnosticAnalysis
  LFortStmtNodes
  )

target_link_libraries(lfortAnalysis
  lfortBasic
  lfortAST
  )
