add_lfort_library(lfortFrontend
  ASTConsumers.cpp
  ASTMerge.cpp
  ASTUnit.cpp
  CacheTokens.cpp
  ChainedDiagnosticConsumer.cpp
  ChainedIncludesSource.cpp
  CompilerInstance.cpp
  CompilerInvocation.cpp
  CreateInvocationFromCommandLine.cpp
  DependencyFile.cpp
  DependencyGraph.cpp
  DiagnosticRenderer.cpp
  FrontendAction.cpp
  FrontendActions.cpp
  FrontendOptions.cpp
  HeaderIncludeGen.cpp
  InitHeaderSearch.cpp
  InitPreprocessor.cpp
  LangStandards.cpp
  LayoutOverrideSource.cpp
  LogDiagnosticPrinter.cpp
  MultiplexConsumer.cpp
  PrintPreprocessedOutput.cpp
  SerializedDiagnosticPrinter.cpp
  TextDiagnostic.cpp
  TextDiagnosticBuffer.cpp
  TextDiagnosticPrinter.cpp
  VerifyDiagnosticConsumer.cpp
  Warnings.cpp
  )

add_dependencies(lfortFrontend
  LFortAttrClasses
  LFortAttrList
  LFortAttrParsedAttrList
  LFortCommentNodes
  LFortDeclNodes
  LFortDiagnosticAST
  LFortDiagnosticCommon
  LFortDiagnosticDriver
  LFortDiagnosticFrontend
  LFortDiagnosticLex
  LFortDiagnosticSema
  LFortDriverOptions
  LFortStmtNodes
  )

target_link_libraries(lfortFrontend
  lfortAST
  lfortBasic
  lfortDriver
  lfortEdit
  lfortLex
  lfortParse
  lfortSema
  lfortSerialization
  )
