add_lfort_library(lfortParse
  ParseAST.cpp
  ParseCXXInlineMethods.cpp
  ParseDecl.cpp
  ParseDeclCXX.cpp
  ParseExpr.cpp
  ParseExprCXX.cpp
  ParseInit.cpp
  ParseObjc.cpp
  ParsePragma.cpp
  ParseStmt.cpp
  ParseTemplate.cpp
  ParseTentative.cpp
  Parser.cpp
  )

add_dependencies(lfortParse
  LFortAttrClasses
  LFortAttrLateParsed
  LFortAttrList
  LFortAttrParsedAttrList
  LFortCommentNodes
  LFortDeclNodes
  LFortDiagnosticCommon
  LFortDiagnosticParse
  LFortStmtNodes
  )

target_link_libraries(lfortParse
  lfortBasic
  lfortAST
  lfortLex
  lfortSema
  )
