add_lfort_library(lfortSerialization
  ASTCommon.h
  ASTReaderInternals.h
  ASTCommon.cpp
  ASTReader.cpp
  ASTReaderDecl.cpp
  ASTReaderStmt.cpp
  ASTWriter.cpp
  ASTWriterDecl.cpp
  ASTWriterStmt.cpp
  GeneratePCH.cpp
  Module.cpp
  ModuleManager.cpp
  )

add_dependencies(lfortSerialization
  LFortAttrClasses
  LFortAttrList
  LFortAttrParsedAttrList
  LFortAttrPCHRead
  LFortAttrPCHWrite
  LFortCommentNodes
  LFortDeclNodes
  LFortDiagnosticCommon
  LFortDiagnosticLex
  LFortDiagnosticSema
  LFortDiagnosticSerialization
  LFortStmtNodes
  )

target_link_libraries(lfortSerialization
  lfortSema
  )
