add_lfort_library(lfortRewriteFrontend
  FixItRewriter.cpp
  FrontendActions.cpp
  HTMLPrint.cpp
  InclusionRewriter.cpp
  RewriteMacros.cpp
  RewriteModernObjC.cpp
  RewriteObjC.cpp
  RewriteTest.cpp
  )

add_dependencies(lfortRewriteFrontend
  LFortAttrClasses
  LFortAttrList
  LFortAttrParsedAttrList
  LFortCommentNodes
  LFortDeclNodes
  LFortDiagnosticCommon
  LFortDiagnosticFrontend
  LFortStmtNodes
  )

target_link_libraries(lfortRewriteFrontend
  lfortBasic
  lfortAST
  lfortParse
  lfortFrontend
  lfortRewriteCore
  )
